update on button

--- a/home.html
+++ b/home.html
@@ -7,6 +7,21 @@
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+.welcome {
+  display: flex; /* Establish flex container */
+  flex-direction: column; /* Stack children vertically */
+  align-items: center; /* Center items on the cross axis (horizontally) */
+  text-align: center;
+  padding: 50px;
+  background-color: #ffeb3b;
+  border-bottom: 5px solid #ffc107;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px #00000050;
+  transition: background-color 0.3s;
+}
+
+
+
 body, html {
   margin: 0;
   padding: 0;
