--- a/home.html
+++ b/home.html
@@ -8,9 +8,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 .welcome {
-  display: flex; /* Establish flex container */
-  flex-direction: column; /* Stack children vertically */
-  align-items: center; /* Center items on the cross axis (horizontally) */
+  display: flex; 
+  flex-direction: column; 
+  align-items: center; 
   text-align: center;
   padding: 50px;
   background-color: #ffeb3b;
