feat: added image for 'about' page

--- a/about.html
+++ b/about.html
@@ -41,8 +41,8 @@
         }
 
         .container h2 {
-            font-size: 2em; /* Double the font size */
-            text-decoration: underline; /* Add underline */
+            font-size: 2em; 
+            text-decoration: underline; 
         }
 
         .content {
@@ -50,9 +50,9 @@
         }
 
         .container img {
-            width: 100%; /* Make the image fill the container width */
-            max-width: 500px; /* Limit the maximum width of the image */
-            margin-top: 20px; /* Add some space between text and image */
+            width: 100%; 
+            max-width: 500px; 
+            margin-top: 20px; 
         }
 
         .bottom-container {
@@ -60,7 +60,7 @@
         }
 
         .bottom-container .content p {
-            font-size: 1.5em; /* Increase the font size */
+            font-size: 1.5em; 
         }
     </style>
 </head>
