feat: implemented data page format and improved other pages

--- a/about.html
+++ b/about.html
@@ -102,13 +102,13 @@ font-size: 18px;
         <ul>
             <li><a href="home.html">Home Page</a></li>
             <li><a href="about.html" class="active">About Page</a></li>
-            <li><a href="search.html">Search Data</a></li>
+            <li><a href="data.html">Search Data</a></li>
             <li><a href="help.html">Help Page</a></li>
         </ul>
     </nav>
 </header>
 <main>
-    <<section class="welcome">
+    <section class="welcome">
         <h1>About Our Team</h1>
         <img src="umd.png" alt="UMD Logo">
         
