--- a/home.html
+++ b/home.html
@@ -123,7 +123,7 @@ header nav ul li a.active, header nav ul li a:hover {
         <ul>
             <li><a href="home.html" class="active">Home Page</a></li>
             <li><a href="about.html">About Page</a></li>
-            <li><a href="search.html">Search Data</a></li>
+            <li><a href="data.html">Search Data</a></li>
             <li><a href="help.html">Help Page</a></li>
         </ul>
     </nav>
