feat: updated search data page

--- a/data.html
+++ b/data.html
@@ -1,112 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>COVID-19 Tracking Interface</title>
-<style>
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>COVID-19 Tracking Interface</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-.welcome {
-  display: flex; 
-  flex-direction: column; 
-  align-items: center; 
-  text-align: center;
-  padding: 50px;
-  background-color: #ffeb3b;
-  border-bottom: 5px solid #ffc107;
-  border-radius: 20px;
-  box-shadow: 0 4px 8px #00000050;
-  transition: background-color 0.3s;
-}
+    .welcome {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      padding: 50px;
+      background-color: #ffeb3b;
+      border-bottom: 5px solid #ffc107;
+      border-radius: 20px;
+      box-shadow: 0 4px 8px #00000050;
+      transition: background-color 0.3s;
+    }
 
-body, html {
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto', sans-serif;
-  background-color: #f4f4f4;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-}
+    body, html {
+      margin: 0;
+      padding: 0;
+      font-family: 'Roboto', sans-serif;
+      background-color: #f4f4f4;
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+    }
 
-header {
-  flex-shrink: 0;
-}
+    header {
+      flex-shrink: 0;
+    }
 
-main {
-  flex: 1 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: linear-gradient(to right, #56ccf2, #2f80ed);
-}
+    main {
+      flex: 1 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(to right, #56ccf2, #2f80ed);
+    }
 
-header nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #004c93;
-  text-align: center;
-  box-shadow: 0 2px 4px #00000050;
-}
+    header nav ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: #004c93;
+      text-align: center;
+      box-shadow: 0 2px 4px #00000050;
+    }
 
-header nav ul li {
-  display: inline;
-}
+    header nav ul li {
+      display: inline;
+    }
 
-header nav ul li a {
-  display: inline-block;
-  padding: 20px;
-  text-decoration: none;
-  color: white;
-  transition: color 0.3s ease;
-}
+    header nav ul li a {
+      display: inline-block;
+      padding: 20px;
+      text-decoration: none;
+      color: white;
+      transition: color 0.3s ease;
+    }
 
-header nav ul li a.active, header nav ul li a:hover {
-  color: #ade2fb;
-}
+    header nav ul li a.active, header nav ul li a:hover {
+      color: #ade2fb;
+    }
 
-.welcome {
-  text-align: center;
-  padding: 50px;
-  background-color: #ffeb3b;
-  border-bottom: 5px solid #ffc107;
-  border-radius: 20px;
-  box-shadow: 0 4px 8px #00000050;
-  transition: background-color 0.3s;
-}
+    .welcome {
+      text-align: center;
+      padding: 50px;
+      background-color: #ffeb3b;
+      border-bottom: 5px solid #ffc107;
+      border-radius: 20px;
+      box-shadow: 0 4px 8px #00000050;
+      transition: background-color 0.3s;
+    }
 
-.welcome h1 {
-  color: #0056b3;
-  text-shadow: 2px 2px 4px #00000050;
-}
+    .welcome h1 {
+      color: #0056b3;
+      text-shadow: 2px 2px 4px #00000050;
+    }
 
-.welcome img {
-  max-width: 40%;
-  
-  border-radius: 10px;
-  box-shadow: 0 4px 8px #00000050;
-}
+    .welcome img {
+      max-width: 40%;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px #00000050;
+    }
+    
+    form {
+      margin-top: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
-</style>
+    label {
+      margin-bottom: 10px;
+    }
+
+    input {
+      width: 200px;
+      padding: 5px;
+      margin-bottom: 10px;
+    }
+
+    button {
+      padding: 10px;
+      background-color: #004c93;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+
+  </style>
 </head>
 <body>
-<header>
+  <header>
     <nav>
-        <ul>
-            <li><a href="home.html">Home Page</a></li>
-            <li><a href="about.html">About Page</a></li>
-            <li><a href="data.html" class="active">Search Data</a></li>
-            <li><a href="help.html">Help Page</a></li>
-        </ul>
+      <ul>
+        <li><a href="home.html">Home Page</a></li>
+        <li><a href="about.html">About Page</a></li>
+        <li><a href="data.html" class="active">Search Data</a></li>
+        <li><a href="help.html">Help Page</a></li>
+      </ul>
     </nav>
-</header>
-<main>
+  </header>
+  <main>
     <section class="welcome">
-        <h1>COVID Tracking Data</h1>
+      <h1>COVID Tracking Data</h1>
+      <form id="stateForm">
+        <label for="stateCode">Enter State Code:</label>
+        <input type="text" id="stateCode" name="stateCode" required>
+        <button type="button" onclick="getStateData()">Get Data</button>
+      </form>
+
+      <div id="result"></div>
     </section>
-</main>
+  </main>
+
+  <script>
+    function getStateData() {
+      var stateCode = document.getElementById('stateCode').value;
+      var apiUrl = `https://api.covidtracking.com/v2/states/${stateCode.toLowerCase()}.json`;
+
+      fetch(apiUrl)
+        .then(response => response.json())
+        .then(data => {
+          document.getElementById('result').innerHTML = '<pre>' + JSON.stringify(data, null, 2) + '</pre>';
+        })
+        .catch(error => {
+          console.error('Error fetching data:', error);
+          document.getElementById('result').innerHTML = 'Error fetching data. Please try again.';
+        });
+    }
+  </script>
 </body>
 </html>
