Changed home.html link to index.html

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -100,7 +100,7 @@ font-size: 18px;
 <header>
     <nav>
         <ul>
-            <li><a href="home.html">Home Page</a></li>
+            <li><a href="index.html">Home Page</a></li>
             <li><a href="about.html" class="active">About Page</a></li>
             <li><a href="data.html">Search Data</a></li>
             <li><a href="help.html">Help Page</a></li>
